# rote

./: AUTHORS  CMakeLists.txt  PUBLICATIONS  README.md  REFERENCES
cmake/: config.h.cmake  rote_sub.cmake  rotevariables.cmake  tmenvariables.cmake
cmake/MyCMakeModules/Platform/: Edison-Intel-C.cmake  Edison-Intel-CXX.cmake  Edison-Intel.cmake
cmake/toolchains/: BGQ-Mira-clang-essl.cmake  BGQ-Vesta-clang-essl.cmake  BGQ-Vesta-gnu-essl.cmake  BGQ-Vesta-xl-essl.cmake  Edison-gnu-mpich-libsci.cmake  Edison-intel-mpich-libsci.cmake  Edison-intel-mpich-mkl.cmake
doc/: Makefile  make.bat
doc/latex_files/: macros.tex  packages.tex
doc/latex_files/macros/: edit_commands.tex  flatex.tex  macros.tex  notation.tex  partitions.tex  tensor_header.tex
doc/source/: btas-like.rst  build.rst  conf.py  core.rst  index.rst  intro.rst  io.rst  tensors.rst
doc/source/btas-like/: level1.rst  level3.rst  levelT.rst
doc/source/core/: axpy_interface.rst  dist_tensor.rst  environment.rst  grid.rst  grid_view.rst  imports.rst  partitioning.rst  redist.rst  repartitioning.rst  slide_partition.rst  tensor.rst  viewing.rst
doc/source/core/imports/: blas.rst  mpi.rst
doc/source/tensors/: deterministic.rst  random.rst
examples/btas/: TTT.cpp
examples/core/: Constructors.cpp
examples/tensors/: Identity.cpp  Ones.cpp  Zeros.cpp
include/: rote.hpp  tensormental.hpp
include/rote/: btas-like.hpp  builtin.hpp  core.hpp  forward_decl.hpp  io.hpp  io_decl.hpp  io_impl.hpp  tensors.hpp  tensors_decl.hpp  tensors_impl.hpp  tests.hpp  types.hpp  util.hpp
include/rote/btas-like/: level1.hpp  level3.hpp  levelT.hpp
include/rote/core/: complex.hpp  complex_decl.hpp  complex_impl.hpp  dist_tensor.hpp  dist_tensor_forward_decl.hpp  environment.hpp  environment_decl.hpp  environment_impl.hpp  error.hpp  error_decl.hpp  forward_decl.hpp  grid.hpp  grid_decl.hpp  grid_impl.hpp  grid_view.hpp  grid_view_decl.hpp  grid_view_impl.hpp  imports.hpp  indexing.hpp  indexing_decl.hpp  indexing_impl.hpp  memory.hpp  memory_decl.hpp  memory_impl.hpp  mode_distribution.hpp  partition_decl.hpp  partition_impl.hpp  permutation.hpp  random.hpp  random_decl.hpp  random_impl.hpp  redist_plan.hpp  repartition_decl.hpp  repartition_impl.hpp  slide_partition_decl.hpp  slide_partition_impl.hpp  structs.hpp  structs_decl.hpp  tensor.hpp  tensor_distribution.hpp  (+9 more)
include/rote/io/: Print.hpp  Write.hpp  print.hpp  read.hpp  write.hpp
include/rote/tensors/: Uniform.hpp  Zeros.hpp
include/rote/tests/: A2ARedist.hpp  AGGRedist.hpp  ARRedist.hpp  AllRedists.hpp  BCastRedist.hpp  GTOGRedist.hpp  LGRedist.hpp  PRedist.hpp  RSGRedist.hpp  RTOGRedist.hpp  ScatterRedist.hpp
include/rote/util/: btas_util.hpp  ten_dist_util.hpp  vec_util.hpp
include/tensormental/: btas-like.hpp  btas-like_decl.hpp  btas-like_impl.hpp  core.hpp  io.hpp  io_decl.hpp  io_impl.hpp  tensors.hpp  tensors_decl.hpp  tensors_impl.hpp  util.hpp
include/tensormental/btas-like/: contract_decl.hpp  contract_impl.hpp  diff_decl.hpp  diff_impl.hpp  elemscal_decl.hpp  elemscal_impl.hpp  level1.hpp  level3.hpp  levelT.hpp  norm_decl.hpp  norm_impl.hpp  permute_decl.hpp  permute_impl.hpp  reduce_decl.hpp  reduce_impl.hpp
include/tensormental/core/: .grid_decl.hpp.swp  complex_decl.hpp  complex_impl.hpp  dist_tensor.hpp  dist_tensor_forward_decl.hpp  environment_decl.hpp  environment_impl.hpp  error_decl.hpp  grid_decl.hpp  grid_impl.hpp  grid_view_decl.hpp  grid_view_impl.hpp  indexing_decl.hpp  indexing_impl.hpp  memory_decl.hpp  memory_impl.hpp  partition_decl.hpp  partition_impl.hpp  random_decl.hpp  random_impl.hpp  repartition_decl.hpp  repartition_impl.hpp  slide_partition_decl.hpp  slide_partition_impl.hpp  tensor.hpp  tensor_forward_decl.hpp  time.hpp  types_decl.hpp  types_impl.hpp  view_decl.hpp  view_impl.hpp
include/tensormental/io/: Print.hpp  Write.hpp
include/tensormental/tensors/: Uniform.hpp  Zeros.hpp
include/tensormental/tests/: A2ARedist.hpp  AGGRedist.hpp  ARRedist.hpp  AllRedists.hpp  BCastRedist.hpp  GTOGRedist.hpp  LGRedist.hpp  PRedist.hpp  RSGRedist.hpp  RTOGRedist.hpp  ScatterRedist.hpp
include/tensormental/util/: btas_util.hpp  graph_util.hpp  redistribute_util.hpp  ten_dist_util.hpp  vec_util.hpp
scripts/: build  clean  run
src/: permutation.cpp  time.cpp
src/btas_like/: GenContract.cpp
src/btas_like/level1/: GenYAxpPx.cpp  GenZAxpBPy.cpp  GenZAxpBypPx.cpp  YAxpBy.cpp  YAxpPx.cpp  ZAxpBy.cpp  ZAxpBypPx.cpp
src/btas_like/levelT/: Contract-deprecate.cpp  Contract.cpp  GenContract.cpp  GenHadamard.cpp  Hadamard.cpp
src/core/: global.cpp  grid.cpp  grid_view.cpp  indexing.cpp  memory.cpp  mode_distribution.cpp  mpi_register.cpp  random.cpp  redist_plan.cpp  tensor.cpp  tensor_distribution.cpp
src/core/dist_tensor/: abstract.cpp  dist_tensor.cpp  mc_mr.cpp  pack.cpp  redistribute.cpp  redistribute_check.cpp  unpack.cpp
src/core/imports/: blas.cpp  mpi.cpp
src/io/: File.cpp  Read.cpp  print.cpp  read.cpp  write.cpp
src/io/Read/: Ascii.hpp  AsciiMatlab.hpp  Binary.hpp  BinaryFlat.hpp
src/util/: btas_util.cpp  graph_util.cpp  redistribute_util.cpp  ten_dist_util.cpp  tensor_distribution.cpp  vec_util.cpp  vector.cpp
tests/CCSD/: term_F.cpp  term_G.cpp  term_H.cpp  term_P.cpp  term_Q.cpp  term_U.cpp  term_W.cpp  term_X.cpp
tests/applications/: BlockMP3DoublePartPerm.cpp  BlockMP3Vesta.cpp  BlockMP3VestaBlkYAxpPx.cpp  BlockMP3VestaLargeReorderTemp.cpp  BlockMP3VestaLargeSize.cpp  BlockMP3WithEmptyDoublePart.cpp  BryanMP3.cpp  MP3.cpp  MP3Newer.cpp  MP3Vesta.cpp  MP3new.cpp  Test3.cpp
tests/btas/: Contract.cpp  Conv2d.cpp  Level1.cpp  TTT.cpp
tests/ccsd/: ccsd.cpp  ccsd_gen.cpp  term_F.cpp  term_G.cpp  term_H.cpp  term_P.cpp  term_Q.cpp  term_Tau.cpp  term_U.cpp  term_W.cpp  term_X.cpp  term_Z.cpp  term_z_small.cpp
tests/core/: AxpyInterface.cpp  Complex.cpp  DifferentGrids.cpp  DistTensor.cpp  GenContractTest.cpp  GenRedistTest.cpp  Grids.cpp  Karen.cpp  RedistCheckTest.cpp  RedistTest.cpp  Tensor.cpp  Version.cpp  Views.cpp  Woody.cpp
tests/gunnels/: example.cpp  preprocess.hpp
(+133 files in other folders)
